--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 click = "==8.1.3"
 gunicorn = "==20.1.0"
 itsdangerous = "==2.1.2"
-python-dotenv = "==0.21.0"
+python-dotenv = "*"
 six = "==1.16.0"
 alembic = "==1.9.2"
 python-dateutil = "==2.8.2"
@@ -16,7 +16,7 @@ greenlet = "==3.0.1"
 flask = "*"
 flask-cors = "==3.0.10"
 flask-login = "==0.6.2"
-flask-migrate = "==4.0.2"
+flask-migrate = "*"
 flask-sqlalchemy = "==3.0.2"
 flask-wtf = "==1.1.1"
 jinja2 = "==3.1.2"
